--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,17 @@
+asgiref==3.8.1
+click==8.1.7
+colorama==0.4.6
 Django==4.2
-djangorestframework==3.14
 django-cors-headers==4.1.0
-jazzmin==2.6.0
-djangorestframework-simplejwt>=5.2.2
-redis>=3.5.3
+django-jazzmin==3.0.1
+djangorestframework==3.14.0
+djangorestframework-simplejwt==5.3.1
+-e git+https://github.com/daniel-devi/DJREACT.git@0283a8376faa196161d7511653f717ee49ac0ec0#egg=DjReact
+Jinja2==3.1.4
+MarkupSafe==3.0.2
+PyJWT==2.10.1
+python-decouple==3.8
+pytz==2024.2
+setuptools==75.6.0
+sqlparse==0.5.3
+tzdata==2024.2
