--- a/Djreact/templates/DReact/frontend/tsconfig.app.json
+++ b/Djreact/templates/DReact/frontend/tsconfig.app.json
@@ -8,12 +8,14 @@
     "skipLibCheck": true,
     "baseUrl": ".", // Base directory for relative paths (e.g., root of the project)
     "paths": {
-      "@components/*": ["src/components/*"], // Custom path alias
-      "@utils/*": ["src/utils/*"], 
-      "@pages/*": ["src/page/*"],
-      "@css/*": ["src/css/*"],
-      "@hooks/*": ["src/hook/*"],
+      "@components/*": ["./src/components/*"], // Custom path alias
+      "@utils/*": ["./src/utils/*"], 
+      "@pages/*": ["./src/page/*"],
+      "@css/*": ["./src/css/*"],
+      "@hooks/*": ["./src/hook/*"],
+      "@/*" : ["./src/*"],
     },
+    
 
     /* Bundler mode */
     "moduleResolution": "bundler",
